--- a/style.css
+++ b/style.css
@@ -112,3 +112,127 @@ body {
 .menu-list-item.active {
     font-weight: bold;
 }
+
+.container {
+    background-color: #151515;
+    color: #fff;
+    min-height: calc(100vh - 50px);
+}
+
+.content-container {
+    margin-left: 50px;
+}
+
+.feature-content {
+    height: 50vh;
+    padding: 50px;
+}
+
+.feature-title {
+    width: 200px;
+}
+
+.feature-desc {
+    width: 500px;
+    color: lightgray;
+    margin: 30px 0;
+}
+
+.feature-button {
+    background-color: #4dbf00;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    font-weight: bold;
+}
+
+.movie-list-container {
+    padding: 20px;
+}
+
+.movie-list-wrapper {
+    overflow: hidden;
+    position: relative;
+}
+.movie-list {
+    display: flex;
+    height: 300px;
+    align-items: center;
+}
+
+.movie-list-item {
+    margin-right: 30px;
+    position: relative;
+}
+
+.movie-list-item:hover .movie-list-item-img {
+    transform: scale(1.2);
+    margin: 0 20px;
+    opacity: 0.5;
+}
+
+.movie-list-item:hover .movie-list-item-title,
+.movie-list-item:hover .movie-list-item-desc,
+.movie-list-item:hover .movie-list-item-button {
+    opacity: 1;
+}
+
+.movie-list-item-img {
+    width: 270px;
+    height: 200px;
+    transition: all 1s ease-in-out;
+    /* object-fit: cover; TODO: FIX */
+}
+
+.movie-list-item-title {
+    background-color: #333;
+    display: block;
+    padding: 0 10px;
+    font-size: 32px;
+    font-weight: bold;
+    position: absolute;
+    top: 10%;
+    left: 50px;
+    opacity: 0;
+    transition: all 1s ease-in-out;
+}
+
+.movie-list-item-desc {
+    background-color: #333;
+    display: block;
+    padding: 0 10px;
+    font-size: 14px;
+    position: absolute;
+    top: 30%;
+    left: 50px;
+    width: 200px;
+    opacity: 0;
+    transition: all 1s ease-in-out;
+}
+
+.movie-list-item-button {
+    padding: 10px;
+    background-color: #4dbf00;
+    color: #fff;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    position: absolute;
+    bottom: 10px;
+    left: 50px;
+    opacity: 0;
+    transition: all 1s ease-in-out;
+}
+
+.arrow {
+    font-size: 120px;
+    top: 90px;
+    right: 0;
+    position: absolute;
+    color: lightgray;
+    opacity: 0.5;
+    cursor: pointer;
+}
